[package]
name = "metaplex-core-nft"
version = "0.1.0"
description = "Smart contract demonstrating Metaplex Core NFT operations"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "metaplex_core_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
mpl-core = "0.7.2"
spl-token = "4.0.0"
solana-program = "1.18.26"

[dev-dependencies]
solana-program-test = "1.18.26"
solana-sdk = "1.18.26"
tokio = { version = "1.0", features = ["macros"] }